--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -30,11 +30,12 @@
                         <h:commandButton action="#{identity.login}" value="Login" />
                     </h:panelGrid>
 
-                    <div>
+                    <div class="hint">
                         The default username/passwords: admin/password, librarian/password, reader1/password, reader2/password
                     </div>
                     <br />
                 </h:form>
+                <br />
                 <h:messages />
                 <ui:insert name="content">
                     [Template content will be inserted here]
